--- a/JavaScript/JavaScript/모달창+형변환+연산자(220530).md
+++ b/JavaScript/JavaScript/모달창+형변환+연산자(220530).md
@@ -33,11 +33,9 @@
 ## confirm
 - 매겨변수로 받은 question과 확인 및 취소 버튼이 있는 모달 창을 보여준다
 - 사용자가 확인버튼을 누르면 true, 그 외의 경우 false를 반환
-- ex)
+- ex) `let isBoss = confirm("당신이 주인인가요?");`
 
-    let isBoss = confirm("당신이 주인인가요?");
-
-    alert( isBoss ); // 확인 버튼을 눌렀다면 true가 출력
+    `alert( isBoss );` // 확인 버튼을 눌렀다면 true가 출력
 
 
 
