--- a/JavaScript/JavaScript/모달창+형변환+연산자(220530).md
+++ b/JavaScript/JavaScript/모달창+형변환+연산자(220530).md
@@ -6,9 +6,7 @@
 - 따라서 사용자는 확인 버튼을 누르기 전까지 모달창 바깥에 있는 버튼을 누르는 등의 행동을 할 수 없다
 - 모달 창이 떠 있는 동안은 스크립트 실행이 일시 중단
 - 모달 창의 모양은 브라우저마다 다르며, 창의 모양은 수정 불가능
-- ex)
-
-    alert('Hello');
+- ex) `alert('Hello');`
 
 
 ## alert
@@ -19,9 +17,7 @@
 - 브라우저에서 제공
 - 두 개의 인수를 받는다
 - 함수가 실행되면 텍스트 메시지와 입력 필드, 확인 및 취소 버튼이 있는 모달 창을 띄워준다
-- ex)
-
-    result = prompt(title, [default]);
+- ex) `result = prompt(title, [default]);`
 
 - title: 사용자에게 보여줄 문자열
 - default: 입력 필드의 초깃값(선택값)
@@ -160,7 +156,7 @@
 `alert( null == 0 ); // (2)` -> 결과 false
 `alert( null >= 0 ); // (3)` -> 결과 true (null이 숫자형으로 변환되기 때문)
 
-### undefined과 0
+### ex) undefined과 0
 `alert( undefined > 0 );` -> 결과 false (undefined가 NaN으로 변환)
 `alert( undefined < 0 );` -> 결과 false (undefined가 NaN으로 변환)
 `alert( undefined == 0 );` -> 결과 false
