--- a/JavaScript/JavaScript/조건문+논리연산자(20220605).md
+++ b/JavaScript/JavaScript/조건문+논리연산자(20220605).md
@@ -17,24 +17,24 @@
 - 물음표 연산자(question mark)라고도 불린다
 - 피연산자가 3개이기 때문에 삼향(ternary) 연산자라고도 부른다
 - 자바스크립트에서 피연산자를 3개나 받는 유일한 연산자
-- `let result = condition ? value1 : value2;` //condition이 truthy면 value1이, 그렇지 않으면 value2가 반환
+- `let result = condition ? value1 : value2; //condition이 truthy면 value1이, 그렇지 않으면 value2가 반환`
 - ex) `let accessAllowed = (age > 18) ? true : false;` 
 -- `age > 18` 양옆의 괄호 생략 가능
 -- 물음표 연산자는 우선순위가 낮으므로 비교 연산자 >가 실행되고 난 뒤에 실행된다.
 
-###다중 `?`
+### 다중 `?`
 - 물음표 연산자를 여러 개 연결하여 복수의 조건 처리 가능
 - ex)
 `
-let age = prompt('나이를 입력해주세요.', 18);
+let age = prompt('나이를 입력해주세요.', 18);`
 
-let message = (age < 3) ? '아기야 안녕?' :
-  (age < 18) ? '안녕!' :
-  (age < 100) ? '환영합니다!' :
-  '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!';
+`let message = (age < 3) ? '아기야 안녕?' :`
+`  (age < 18) ? '안녕!' :`
+`  (age < 100) ? '환영합니다!' :`
+`  '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!';`
 
-alert( message );
-`
+`alert( message );`
+
 -- 첫 번째 물음표에선 조건문 `age < 3`을 검사
 -- 그 결과가 참이면 '아기야 안녕?'를 반환하고, 그렇지 않다면 첫 번째 콜론 ":"에 이어지는 조건문 `age < 18`을 검사
 -- 그 결과가 참이면 '안녕!'를 반환하고 그렇지 않다면 다음 콜론 ":"에 이어지는 조건문 age < 100을 검사
