--- a/JavaScript/JavaScript/조건문+논리연산자(20220605).md
+++ b/JavaScript/JavaScript/조건문+논리연산자(20220605).md
@@ -25,22 +25,23 @@
 ### 다중 `?`
 - 물음표 연산자를 여러 개 연결하여 복수의 조건 처리 가능
 - ex)
-`
-let age = prompt('나이를 입력해주세요.', 18);`
+<pre><code>{
+let age = prompt('나이를 입력해주세요.', 18);
 
-`let message = (age < 3) ? '아기야 안녕?' :`
-`  (age < 18) ? '안녕!' :`
-`  (age < 100) ? '환영합니다!' :`
-`  '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!';`
+let message = (age < 3) ? '아기야 안녕?' :
+  (age < 18) ? '안녕!' :
+  (age < 100) ? '환영합니다!' :
+  '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!';
 
-`alert( message );`
+alert( message );
+}</code></pre>
 
--- 첫 번째 물음표에선 조건문 `age < 3`을 검사
--- 그 결과가 참이면 '아기야 안녕?'를 반환하고, 그렇지 않다면 첫 번째 콜론 ":"에 이어지는 조건문 `age < 18`을 검사
--- 그 결과가 참이면 '안녕!'를 반환하고 그렇지 않다면 다음 콜론 ":"에 이어지는 조건문 age < 100을 검사
--- 그 결과가 참이면 '환영합니다!'를 반환하고 그렇지 않다면 마지막 콜론 ":" 이후의 표현식인 '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!'를 반환
--- `if ~ else`를 사용하여 변환하면
-`
+  - 첫 번째 물음표에선 조건문 `age < 3`을 검사
+  - 그 결과가 참이면 '아기야 안녕?'를 반환하고, 그렇지 않다면 첫 번째 콜론 ":"에 이어지는 조건문 `age < 18`을 검사
+  - 그 결과가 참이면 '안녕!'를 반환하고 그렇지 않다면 다음 콜론 ":"에 이어지는 조건문 age < 100을 검사
+  - 그 결과가 참이면 '환영합니다!'를 반환하고 그렇지 않다면 마지막 콜론 ":" 이후의 표현식인 '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!'를 반환
+  - `if ~ else`를 사용하여 변환하면
+<pre><code>{
 if (age < 3) {
   message = '아기야 안녕?';
 } else if (age < 18) {
@@ -50,15 +51,16 @@ if (age < 3) {
 } else {
   message = '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!';
 }
-`
+}</code></pre>
 
 ### 부적절한 물음표 연산자 `?`
-`
+<pre><code>
 let company = prompt('자바스크립트는 어떤 회사가 만들었을까요?', '');
 
 (company == 'Netscape') ?
    alert('정답입니다!') : alert('오답입니다!');
-`
+</code></pre>
+
 - 조건 company == 'Netscape'의 검사 결과에 따라 ? 뒤에 이어지는 첫 번째 혹은 두 번째 표현식이 실행되어 alert 창이 뜬다.
 - 위 예시에선 평가 결과를 변수에 할당하지 않고, 결과에 따라 실행되는 표현식이 달라지도록 한다.
 - `if`문을 사용할 때보다 코드길이가 짧아지지만, 가독성이 떨어진다
@@ -75,81 +77,87 @@ let company = prompt('자바스크립트는 어떤 회사가 만들었을까요?
 - 기본형: `result = a || b;`
 - OR 연산자는 불린값을 조작하는 데 쓰이며, 인수 중 하나라도 true이면 true를 반환하고, 그렇지 않으면 false를 반환
 - OR 연산자는 이항 연산자이므로 아래와 같이 네 가지 조합이 가능
--- `alert( true || true );   // true
-alert( false || true );  // true
-alert( true || false );  // true
-alert( false || false ); // false`
+  - `alert( true || true );   // true`
+  - `alert( false || true );  // true`
+  - `alert( true || false );  // true`
+  - `alert( false || false ); // false`
 - 피연산자가 모두 `false`인 경우를 제외하면 결과는 항상 `true`
 - 피연산자가 불린형이 아니면, 평가를 위해 불린형으로 변환된다.
--- ex)연산 과정에서 숫자 1은 true로, 숫자 0은 false로 변환
+  - ex)연산 과정에서 숫자 1은 true로, 숫자 0은 false로 변환
 - OR 연산자 `||`은 주어진 조건 중 하나라도 참인지를 테스트하는 용도로 if문에서 자주 사용됩니다.
--- ex) 
-`let hour = 9;
+  - ex) 
+<pre><code>
+let hour = 9;
 if (hour < 10 || hour > 18) {
   alert( '영업시간이 아닙니다.' );
-}`
+}
+</code></pre>
 ### `OR` 연산자와 피연산자가 여러개인 경우
 - `result = value1 || value2 || value3;`
--- 가장 왼쪽 피연산자부터 시작해 오른쪽으로 나아가며 피연산자를 평가
--- 각 피연산자를 불린형으로 변환, 변환 후 그 값이 true이면 연산을 멈추고 해당 피연산자의 변환 전 원래 값을 반환
--- 피연산자 모두를 평가한 경우(모든 피연산자가 false로 평가되는 경우)엔 마지막 피연산자를 반환
--- 반환값이 형 변환을 하지 않은 원래 값
+  - 가장 왼쪽 피연산자부터 시작해 오른쪽으로 나아가며 피연산자를 평가
+  - 각 피연산자를 불린형으로 변환, 변환 후 그 값이 true이면 연산을 멈추고 해당 피연산자의 변환 전 원래 값을 반환
+  - 피연산자 모두를 평가한 경우(모든 피연산자가 false로 평가되는 경우)엔 마지막 피연산자를 반환
+  - 반환값이 형 변환을 하지 않은 원래 값
 - OR "||" 연산자를 여러 개 체이닝(chaining) 하면 첫 번째 truthy를 반환하며, 피연산자에 truthy가 하나도 없다면 마지막 피연산자를 반환
 - ex)
-`
+
+<pre><code>
 alert( 1 || 0 ); // 1 (1은 truthy임)
 
 alert( null || 1 ); // 1 (1은 truthy임)
 alert( null || 0 || 1 ); // 1 (1은 truthy임)
 
 alert( undefined || null || 0 ); // 0 (모두 falsy이므로, 마지막 값을 반환함)
-`
+</code></pre>
+
 - 이런 OR 연산자의 추가 기능을 이용하면 여러 용도로 OR 연산자를 활용할 수 있다.
 1. 변수 또는 표현식으로 구성된 목록에서 첫 번째 truthy 얻기
-- firstName, lastName, nickName이란 변수가 있는데 이 값들은 모두 옵션 값이라고 가정해보자. 
+- `firstName`, `lastName`, `nickName` 이란 변수가 있는데 이 값들은 모두 옵션 값이라고 가정해보자. 
 - `OR ||`을 사용하면 실제 값이 들어있는 변수를 찾고, 그 값을 보여줄 수 있다. 변수 모두에 값이 없는 경우엔 익명 출력
 - ex)
-`
+<pre><code>
 let firstName = "";
 let lastName = "";
 let nickName = "바이올렛";
 
 alert( firstName || lastName || nickName || "익명"); // 바이올렛
-`
+</code></pre>
 2. 단락 평가
-- OR||은 왼쪽부터 시작해서 오른쪽으로 평가를 진행하는데, truthy를 만나면 나머지 값들은 건드리지 않은 채 평가를 멈춘다. -> 이런 프로세스를 단락 평가라고 한다
+- `OR||` 은 왼쪽부터 시작해서 오른쪽으로 평가를 진행하는데, truthy를 만나면 나머지 값들은 건드리지 않은 채 평가를 멈춘다. -> 이런 프로세스를 단락 평가라고 한다
 - 단락 평가의 동작 방식은 두 번째 피연산자가 변수 할당과 같은 부수적인 효과(side effect)를 가지는 표현식 일 때 명확히 볼 수 있다.
 - ex) 
-`
+<pre><code>
 true || alert("not printed");
 false || alert("printed");
-`
--- 첫 번째 줄의 || 연산자는 true를 만나자마자 평가를 멈추기 때문에 alert가 실행되지 않습니다.
+</code></pre>
+  - 첫 번째 줄의 || 연산자는 true를 만나자마자 평가를 멈추기 때문에 alert가 실행되지 않습니다.
 - 단락 평가는 연산자 왼쪽 조건이 falsy일 때만 명령어를 실행하고자 할 때 자주 쓰입니다.
 
 ## &&(AND)
 - `result = a && b;`
 - AND 연산자는 두 피연산자가 모두가 참일 때 `true`를 반환하며 그 외의 경우는 `false`를 반환
--- `alert( true && true );   // true
+  - `alert( true && true );   // true
 alert( false && true );  // false
 alert( true && false );  // false
 alert( false && false ); // false`
 - OR 연산자와 마찬가지로 AND 연산자의 피연산자도 타입에 제약이 없습니다.
--- ex) 
-`if (1 && 0) { // 피연산자가 숫자형이지만 논리형으로 바뀌어 true && false가 됩니다.
+  - ex) 
+<pre><code>
+if (1 && 0) { // 피연산자가 숫자형이지만 논리형으로 바뀌어 true && false가 됩니다.
   alert( "if 문 안에 falsy가 들어가 있으므로 alert창은 실행되지 않습니다." );
-}`
-
+}
+</code></pre>
 ### AND 연산자와 피연산자가 여러 개인 경우
 - ex) `result = value1 && value2 && value3;`
--- AND 연산자 &&는 아래와 같은 순서로 동작한다.
---- 가장 왼쪽 피연산자부터 시작해 오른쪽으로 나아가며 피연산자를 평가
---- 각 피연산자는 불린형으로 변환 변환 후 값이 false이면 평가를 멈추고 해당 피연산자의 변환 전 원래 값을 반환
---- 피연산자 모두가 평가되는 경우(모든 피연산자가 true로 평가되는 경우)엔 마지막 피연산자가 반환
--- AND 연산자는 첫 번째 falsy를 반환합니다. 피연산자에 falsy가 없다면 마지막 값을 반환
--- 알고리즘은 OR 연산자의 알고리즘과 유사한데, 차이점은 AND 연산자가 첫 번째 falsy를 반환하는 반면, OR은 첫 번째 truthy를 반환한다는 것이다
--- ex) 
-`// 첫 번째 피연산자가 truthy이면,
+  - AND 연산자 &&는 아래와 같은 순서로 동작한다.
+    - 가장 왼쪽 피연산자부터 시작해 오른쪽으로 나아가며 피연산자를 평가
+    - 각 피연산자는 불린형으로 변환 변환 후 값이 false이면 평가를 멈추고 해당 피연산자의 변환 전 원래 값을 반환
+    - 피연산자 모두가 평가되는 경우(모든 피연산자가 true로 평가되는 경우)엔 마지막 피연산자가 반환
+  - AND 연산자는 첫 번째 falsy를 반환합니다. 피연산자에 falsy가 없다면 마지막 값을 반환
+  - 알고리즘은 OR 연산자의 알고리즘과 유사한데, 차이점은 AND 연산자가 첫 번째 falsy를 반환하는 반면, OR은 첫 번째 truthy를 반환한다는 것이다
+  - ex) 
+<pre><code>
+// 첫 번째 피연산자가 truthy이면,
 // AND는 두 번째 피연산자를 반환합니다.
 alert( 1 && 0 ); // 0
 alert( 1 && 5 ); // 5
@@ -157,11 +165,13 @@ alert( 1 && 5 ); // 5
 // 첫 번째 피연산자가 falsy이면,
 // AND는 첫 번째 피연산자를 반환하고, 두 번째 피연산자는 무시합니다.
 alert( null && 5 ); // null
-alert( 0 && "아무거나 와도 상관없습니다." ); // 0`
--- AND 연산자도 피연산자 여러 개를 연속해서 전달 가능
---- ex) `alert( 1 && 2 && null && 3 ); // null`
--- AND 연산자의 피연산자가 모두 truthy이기 때문에 마지막 피연산자가 반환
---- `alert( 1 && 2 && 3 ); // 마지막 값, 3`
+alert( 0 && "아무거나 와도 상관없습니다." ); // 0
+</code></pre>
+
+  - AND 연산자도 피연산자 여러 개를 연속해서 전달 가능
+    - ex) `alert( 1 && 2 && null && 3 ); // null`
+  - AND 연산자의 피연산자가 모두 truthy이기 때문에 마지막 피연산자가 반환
+    - `alert( 1 && 2 && 3 ); // 마지막 값, 3`
 
 #### 주의 사항
 - &&의 우선순위가 ||보다 높다.
@@ -174,20 +184,24 @@ alert( 0 && "아무거나 와도 상관없습니다." ); // 0`
 - NOT 연산자는 인수를 하나만 받고, 다음 순서대로 연산을 수행
 1. 피연산자를 불린형(true / false)으로 변환
 2. 1에서 변환된 값의 역을 반환
--- ex)
-`alert( !true ); // false
-alert( !0 ); // true`
+  - ex)
+<pre><code>
+alert( !true ); // false
+alert( !0 ); // true
+</code></pre>
 - NOT을 두 개 연달아 사용(!!)하면 값을 불린형으로 변환 가능
--- ex)
-`alert( !!"non-empty string" ); // true
-alert( !!null ); // false`
+  - ex)
+<pre><code>
+alert( !!"non-empty string" ); // true
+alert( !!null ); // false
+</code></pre>
 1. 첫 번째 NOT 연산자는 피연산자로 받은 값을 불린형으로 변환한 후 이 값의 역을 반환
 2. 두 번째 NOT 연산자는 첫 번째 NOT 연산자가 반환한 값의 역을 반환 
 3. 이렇게 NOT을 연달아 사용하면 특정 값을 불린형으로 변환할 수 있다.
 - 내장 함수 `Boolean`을 사용하면 `!!`을 사용한 것과 같은 결과를 도출할 수 있다.
--- ex)
-`
+  - ex)
+<pre><code>
 alert( Boolean("non-empty string") ); // true
 alert( Boolean(null) ); // false
-`
+</code></pre>
 - NOT 연산자의 우선순위는 모든 논리 연산자 중에서 가장 높기 때문에 항상 &&나 || 보다 먼저 실행된다.
