--- a/JavaScript/JavaScript/조건문+논리연산자(20220605).md
+++ b/JavaScript/JavaScript/조건문+논리연산자(20220605).md
@@ -6,9 +6,11 @@
 - 숫자 `0`, 빈 문자열`""`, `null`, `undefined`, `NaN`은 불린형으로 변환 시 모두 `false`가 된다. 이런 값들은 ‘falsy(거짓 같은)’ 값이라고 한다
 - 그 이외의 값은 `true`가 되므로 `truthy`(참 같은) 값이라고 부른다
 - ex)
-` if(0){ // 0은 falsy로 괄호 안의 코드들은 실행되지 않는다
+<pre><code>
+if(0){ // 0은 falsy로 괄호 안의 코드들은 실행되지 않는다
   ...
 }
+</code></pre>
 `
 - `else` 절 : `else` 뒤에 이어지는 코드 블록은 조건이 거짓일 때 실행
 - `else if` : 복수 조건 처리
@@ -19,13 +21,13 @@
 - 자바스크립트에서 피연산자를 3개나 받는 유일한 연산자
 - `let result = condition ? value1 : value2; //condition이 truthy면 value1이, 그렇지 않으면 value2가 반환`
 - ex) `let accessAllowed = (age > 18) ? true : false;` 
--- `age > 18` 양옆의 괄호 생략 가능
--- 물음표 연산자는 우선순위가 낮으므로 비교 연산자 >가 실행되고 난 뒤에 실행된다.
+  - `age > 18` 양옆의 괄호 생략 가능
+  - 물음표 연산자는 우선순위가 낮으므로 비교 연산자 >가 실행되고 난 뒤에 실행된다.
 
 ### 다중 `?`
 - 물음표 연산자를 여러 개 연결하여 복수의 조건 처리 가능
 - ex)
-<pre><code>{
+<pre><code>
 let age = prompt('나이를 입력해주세요.', 18);
 
 let message = (age < 3) ? '아기야 안녕?' :
@@ -41,7 +43,7 @@ alert( message );
   - 그 결과가 참이면 '안녕!'를 반환하고 그렇지 않다면 다음 콜론 ":"에 이어지는 조건문 age < 100을 검사
   - 그 결과가 참이면 '환영합니다!'를 반환하고 그렇지 않다면 마지막 콜론 ":" 이후의 표현식인 '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!'를 반환
   - `if ~ else`를 사용하여 변환하면
-<pre><code>{
+<pre><code>
 if (age < 3) {
   message = '아기야 안녕?';
 } else if (age < 18) {
