--- a/JavaScript/JavaScript/조건문+논리연산자(20220605).md
+++ b/JavaScript/JavaScript/조건문+논리연산자(20220605).md
@@ -11,7 +11,7 @@ if(0){ // 0은 falsy로 괄호 안의 코드들은 실행되지 않는다
   ...
 }
 </code></pre>
-`
+
 - `else` 절 : `else` 뒤에 이어지는 코드 블록은 조건이 거짓일 때 실행
 - `else if` : 복수 조건 처리
 
@@ -36,7 +36,7 @@ let message = (age < 3) ? '아기야 안녕?' :
   '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!';
 
 alert( message );
-}</code></pre>
+</code></pre>
 
   - 첫 번째 물음표에선 조건문 `age < 3`을 검사
   - 그 결과가 참이면 '아기야 안녕?'를 반환하고, 그렇지 않다면 첫 번째 콜론 ":"에 이어지는 조건문 `age < 18`을 검사
@@ -53,7 +53,7 @@ if (age < 3) {
 } else {
   message = '나이가 아주 많으시거나, 나이가 아닌 값을 입력 하셨군요!';
 }
-}</code></pre>
+</code></pre>
 
 ### 부적절한 물음표 연산자 `?`
 <pre><code>
