--- a/JavaScript/JavaScript/조건문+논리연산자(20220605).md
+++ b/JavaScript/JavaScript/조건문+논리연산자(20220605).md
@@ -206,4 +206,4 @@ alert( !!null ); // false
 alert( Boolean("non-empty string") ); // true
 alert( Boolean(null) ); // false
 </code></pre>
-- NOT 연산자의 우선순위는 모든 논리 연산자 중에서 가장 높기 때문에 항상 &&나 || 보다 먼저 실행된다.
+- NOT 연산자의 우선순위는 모든 논리 연산자 중에서 가장 높기 때문에 항상 `&&`나 `||` 보다 먼저 실행된다.
