--- a/JavaScript/JavaScript/연산자'??'+반복문(20220606).md
+++ b/JavaScript/JavaScript/연산자'??'+반복문(20220606).md
@@ -1,63 +1,54 @@
+# nullish 병합 연산자 '??'
+- 최근에 추가되어, 스펙에 추가된 지 얼마 안 된 문법
+- 구식 브라우저는 폴리필이 필요합니다.
+- nullish 병합 연산자(nullish coalescing operator) `??`를 사용하면 짧은 문법으로 여러 피연산자 중 그 값이 ‘확정되어 있는’ 변수를 찾을 수 있다.
+- `a ?? b`의 결과
+  - `a`가 `null`도 아니고 `undefined`도 아니면 `a`
+  - 그 외의 경우는 `b`
+- nullish 병합 연산자 ??없이 x = a ?? b와 동일한 동작을 하는 코드를 작성하면 다음과 같습니다.
+- `x = (a !== null && a !== undefined) ? a : b;`
+- 비교 연산자와 논리 연산자만으로 nullish 병합 연산자와 같은 기능을 하는 코드를 작성하니 코드 길이가 길어진다.
 
-nullish 병합 연산자 '??'
-최근에 추가됨
-스펙에 추가된 지 얼마 안 된 문법입니다. 구식 브라우저는 폴리필이 필요합니다.
-nullish 병합 연산자(nullish coalescing operator) ??를 사용하면 짧은 문법으로 여러 피연산자 중 그 값이 ‘확정되어있는’ 변수를 찾을 수 있습니다.
-
-a ?? b의 평가 결과는 다음과 같습니다.
-
-a가 null도 아니고 undefined도 아니면 a
-그 외의 경우는 b
-nullish 병합 연산자 ??없이 x = a ?? b와 동일한 동작을 하는 코드를 작성하면 다음과 같습니다.
-
-x = (a !== null && a !== undefined) ? a : b;
-비교 연산자와 논리 연산자만으로 nullish 병합 연산자와 같은 기능을 하는 코드를 작성하니 코드 길이가 길어지네요.
-
-또 다른 예시를 살펴봅시다. firstName, lastName, nickName이란 변수에 사용자 이름이나 별명을 저장하는데, 사용자가 아무런 정보도 입력하지 않는 케이스도 허용한다고 해보겠습니다.
-
-화면엔 세 변수 중 실제 값이 있는 변수의 값을 출력하는데, 세 변수 모두 값이 없다면 '익명의 사용자’가 출력되도록 해보죠.
-
-이럴 때 nullish 병합 연산자 ??를 사용하면 값이 정해진 변수를 간편하게 찾아낼 수 있습니다.
-
+- firstName, lastName, nickName이란 변수에 사용자 이름이나 별명을 저장하는데, 사용자가 아무런 정보도 입력하지 않는 케이스도 허용한다고 가정하자
+- 화면엔 세 변수 중 실제 값이 있는 변수의 값을 출력하는데, 세 변수 모두 값이 없다면 '익명의 사용자’가 출력되도록 할 때 nullish 병합 연산자 ??를 사용하면 값이 정해진 변수를 간편하게 찾아낼 수 있다.
+<pre><code>
 let firstName = null;
 let lastName = null;
 let nickName = "바이올렛";
 
 // null이나 undefined가 아닌 첫 번째 피연산자
 alert(firstName ?? lastName ?? nickName ?? "익명의 사용자"); // 바이올렛
-'??'와 '||'의 차이
-nullish 병합 연산자는 OR 연산자 ||와 상당히 유사해 보입니다. 실제로 위 예시에서 ??를 ||로 바꿔도 그 결과는 동일하기까지 하죠. 관련 내용은 이전 챕터에서 살펴본 바 있습니다.
+</code></pre>
 
-그런데 두 연산자 사이에는 중요한 차이점이 있습니다.
+## '??'와 '||'의 차이
+- nullish 병합 연산자는 OR 연산자 ||와 상당히 유사하며, 실제로 위 예시에서 ??를 ||로 바꿔도 그 결과는 동일
+- 두 연산자의 차이점
+  - ||는 첫 번째 truthy 값을 반환
+  - ??는 첫 번째 정의된(defined) 값을 반환
+- null과 undefined, 숫자 0을 구분 지어 다뤄야 할 때 이 차이점은 매우 중요한 역할을 합니다.
+- ex) `height = height ?? 100;`
+  - height에 값이 정의되지 않은경우 height엔 100이 할당됩니다.
 
-||는 첫 번째 truthy 값을 반환합니다.
-??는 첫 번째 정의된(defined) 값을 반환합니다.
-null과 undefined, 숫자 0을 구분 지어 다뤄야 할 때 이 차이점은 매우 중요한 역할을 합니다.
-
-예시를 살펴봅시다.
-
-height = height ?? 100;
-height에 값이 정의되지 않은경우 height엔 100이 할당됩니다.
-
-이제 ??와 ||을 비교해봅시다.
-
+- 이제 ??와 ||을 비교해봅시다.
+  - ex) 
+<pre><code>
 let height = 0;
 
 alert(height || 100); // 100
 alert(height ?? 100); // 0
-height || 100은 height에 0을 할당했지만 0을 falsy 한 값으로 취급했기 때문에 null이나 undefined를 할당한 것과 동일하게 처리합니다. 따라서 height || 100의 평가 결과는 100입니다.
+</code></pre>
+    - height || 100은 height에 0을 할당했지만 0을 falsy 한 값으로 취급했기 때문에 null이나 undefined를 할당한 것과 동일하게 처리
+    - 따라서 height || 100의 평가 결과는 100
+    - 반면 height ?? 100의 평가 결과는 height가 정확하게 null이나 undefined일 경우에만 100이 된다. 
+    - 예시에선 height에 0이라는 값을 할당했기 때문에 얼럿창엔 0이 출력됩니다.
+  - 이런 특징 때문에 높이처럼 0이 할당될 수 있는 변수를 사용해 기능을 개발할 땐 ||보다 ??가 적합하다.
 
-반면 height ?? 100의 평가 결과는 height가 정확하게 null이나 undefined일 경우에만 100이 됩니다. 예시에선 height에 0이라는 값을 할당했기 때문에 얼럿창엔 0이 출력됩니다.
-
-이런 특징 때문에 높이처럼 0이 할당될 수 있는 변수를 사용해 기능을 개발할 땐 ||보다 ??가 적합합니다.
-
-연산자 우선순위
-??의 연산자 우선순위는 5로 꽤 낮습니다.
-
-따라서 ??는 =와 ? 보다는 먼저, 대부분의 연산자보다는 나중에 평가됩니다.
-
-그렇기 때문에 복잡한 표현식 안에서 ??를 사용해 값을 하나 선택할 땐 괄호를 추가하는 게 좋습니다.
-
+## 연산자 우선순위
+- ??의 연산자 우선순위는 5로 꽤 낮습니다.
+- 따라서 ??는 =와 ? 보다는 먼저, 대부분의 연산자보다는 나중에 평가된다.
+- 그렇기 때문에 복잡한 표현식 안에서 ??를 사용해 값을 하나 선택할 땐 괄호를 추가하는 게 좋다.
+- ex)
+<pre><code>
 let height = null;
 let width = null;
 
@@ -65,110 +56,111 @@ let width = null;
 let area = (height ?? 100) * (width ?? 50);
 
 alert(area); // 5000
-그렇지 않으면 *가 ??보다 우선순위가 높기 때문에 *가 먼저 실행됩니다.
-
-결국엔 아래 예시처럼 동작하겠죠.
-
+</code></pre>
+- 그렇지 않으면 *가 ??보다 우선순위가 높기 때문에 *가 먼저 실행
+  - ex)
+  <pre><code>
 // 원치 않는 결과
 let area = height ?? (100 * width) ?? 50;
-??엔 자바스크립트 언어에서 규정한 또 다른 제약사항이 있습니다.
+</code><pre>
 
-안정성 관련 이슈 때문에 ??는 &&나 ||와 함께 사용하지 못합니다.
+- ??엔 자바스크립트 언어에서 규정한 또 다른 제약사항이 있습니다.
+- 안정성 관련 이슈 때문에 ??는 &&나 ||와 함께 사용하지 못한다.
+  - ex)
+`let x = 1 && 2 ?? 3; // SyntaxError: Unexpected token '??'`
+  - 이 제약에 대해선 아직 논쟁이 많긴 하지만 사람들이 ||를 ??로 바꾸기 시작하면서 만드는 실수를 방지하고자 명세서에 제약이 추가되었다
+  - 제약을 피하려면 괄호를 사용하자
 
-아래 예시를 실행하면 문법 에러가 발생합니다.
-
-let x = 1 && 2 ?? 3; // SyntaxError: Unexpected token '??'
-이 제약에 대해선 아직 논쟁이 많긴 하지만 사람들이 ||를 ??로 바꾸기 시작하면서 만드는 실수를 방지하고자 명세서에 제약이 추가된 상황입니다.
-
-제약을 피하려면 괄호를 사용해주세요.
-
+<pre><code>
 let x = (1 && 2) ?? 3; // 제대로 동작합니다.
 
 alert(x); // 2
+</code></pre>
 
 
+# while과 for 반복문
 
-
-
-while과 for 반복문
-개발을 하다 보면 여러 동작을 반복해야 하는 경우가 종종 생깁니다.
-
-상품 목록에서 상품을 차례대로 출력하거나 숫자를 1부터 10까지 하나씩 증가시키면서 동일한 코드를 반복 실행해야 하는 경우같이 말이죠.
-
-반복문(loop) 을 사용하면 동일한 코드를 여러 번 반복할 수 있습니다.
-
-‘while’ 반복문
-while 반복문의 문법은 다음과 같습니다.
-
+## ‘while’ 반복문
+- while 반복문의 문법은 다음과 같습니다.
+  - ex)
+<pre><code>
 while (condition) {
   // 코드
   // '반복문 본문(body)'이라 불림
 }
-condition(조건)이 truthy 이면 반복문 본문의 코드가 실행됩니다.
+</code></pre>
 
-아래 반복문은 조건 i < 3을 만족할 동안 i를 출력해줍니다.
-
+- condition(조건)이 truthy 이면 반복문 본문의 코드가 실행됩니다.
+- 아래 반복문은 조건 i < 3을 만족할 동안 i를 출력해줍니다.
+  - ex)
+<pre><code>
 let i = 0;
 while (i < 3) { // 0, 1, 2가 출력됩니다.
   alert( i );
   i++;
 }
-반복문 본문이 한 번 실행되는 것을 반복(iteration, 이터레이션) 이라고 부릅니다. 위 예시에선 반복문이 세 번의 이터레이션을 만듭니다.
+</code></pre>
 
-i++가 없었다면 이론적으로 반복문이 영원히 반복되었을 겁니다. 그런데 브라우저는 이런 무한 반복을 멈추게 해주는 실질적인 수단을 제공합니다. 서버 사이드 자바스크립트도 이런 수단을 제공해 주므로 무한으로 반복되는 프로세스를 죽일 수 있습니다.
-
-반복문 조건엔 비교뿐만 아니라 모든 종류의 표현식, 변수가 올 수 있습니다. 조건은 while에 의해 평가되고, 평가 후엔 불린값으로 변경됩니다.
-
-아래 예시에선 while (i != 0)을 짧게 줄여 while (i)로 만들어보았습니다.
-
+- 반복문 본문이 한 번 실행되는 것을 반복(iteration, 이터레이션) 이라고 부르며, 위 예시에선 반복문이 세 번의 이터레이션을 만든다.
+- i++가 없었다면 이론적으로 반복문이 영원히 반복되었겠지만, 브라우저는 이런 무한 반복을 멈추게 해주는 실질적인 수단을 제공하며, 서버 사이드 자바스크립트도 이런 수단을 제공해 주므로 무한으로 반복되는 프로세스를 죽일 수 있다.
+- 반복문 조건엔 비교뿐만 아니라 모든 종류의 표현식, 변수가 올 수 있다. 조건은 while에 의해 평가되고, 평가 후엔 불린값으로 변경된다.
+- 아래 예시에선 while (i != 0)을 짧게 줄여 while (i)로 변경
+  - ex)
+  <pre><code>
 let i = 3;
 while (i) { // i가 0이 되면 조건이 falsy가 되므로 반복문이 멈춥니다.
   alert( i );
   i--;
 }
-본문이 한 줄이면 대괄호를 쓰지 않아도 됩니다.
-반복문 본문이 한 줄짜리 문이라면 대괄호 {…}를 생략할 수 있습니다.
-
+</code></pre>
+- 본문이 한 줄이면 대괄호를 쓰지 않아도 된다.
+- 반복문 본문이 한 줄짜리 문이라면 `대괄호 {…}` 생략 가능
+<pre><code>
 let i = 3;
 while (i) alert(i--);
-‘do…while’ 반복문
-do..while 문법을 사용하면 condition을 반복문 본문 아래로 옮길 수 있습니다.
+</code></pre>
 
+## ‘do…while’ 반복문
+- do..while 문법을 사용하면 condition을 반복문 본문 아래로 옮길 수 있다.
+  - 기본형
+<pre><code>
 do {
   // 반복문 본문
 } while (condition);
-이때 본문이 먼저 실행되고, 조건을 확인한 후 조건이 truthy인 동안엔 본문이 계속 실행됩니다.
-
-예시:
-
+</code></pre>
+- 이때 본문이 먼저 실행되고, 조건을 확인한 후 조건이 truthy인 동안엔 본문이 계속 실행됩니다.
+  - ex) 
+<pre><code>
 let i = 0;
 do {
   alert( i );
   i++;
 } while (i < 3);
-do..while 문법은 조건이 truthy 인지 아닌지에 상관없이, 본문을 최소한 한번이라도 실행하고 싶을 때만 사용해야 합니다. 대다수의 상황에선 do..while보다 while(…) {…}이 적합합니다.
+</code></pre>
+- `do..while`문법은 조건이 `truthy`인지 아닌지에 상관없이, 본문을 최소한 한번이라도 실행하고 싶을 때만 사용해야 합니다.
+- 대다수의 상황에선 `do..while`보다 `while(…) {…}`이 적합하다.
 
-‘for’ 반복문
-for 반복문은 while 반복문보다는 복잡하지만 가장 많이 쓰이는 반복문입니다.
-
-문법은 다음과 같습니다.
-
+## ‘for’ 반복문
+- for 반복문은 while 반복문보다는 복잡하지만 가장 많이 쓰인다
+- 기본형
+<pre><code>
 for (begin; condition; step) {
   // ... 반복문 본문 ...
 }
-for문을 구성하는 각 요소가 무엇을 의미하는지 알아봅시다. 아래 반복문을 실행하면 i가 0부터 3이 될 때까지(단, 3은 포함하지 않음) alert(i)가 호출됩니다.
-
+</code></pre>
+- 아래 반복문을 실행하면 i가 0부터 3이 될 때까지(단, 3은 포함하지 않음) alert(i)가 호출됩니다.
+<pre><code>
 for (let i = 0; i < 3; i++) { // 0, 1, 2가 출력됩니다.
   alert(i);
 }
-이제 for문의 구성 요소를 하나씩 살펴봅시다.
+</code></pre>
 
-구성 요소		
-begin	i = 0	반복문에 진입할 때 단 한 번 실행됩니다.
-condition	i < 3	반복마다 해당 조건이 확인됩니다. false이면 반복문을 멈춥니다.
-body	alert(i)	condition이 truthy일 동안 계속해서 실행됩니다.
-step	i++	각 반복의 body가 실행된 이후에 실행됩니다.
-일반적인 반복문 알고리즘은 다음과 같습니다.
+### 구성 요소		
+- begin :	`i = 0`	반복문에 진입할 때 단 한 번 실행됩니다.
+- condition	: `i < 3`	반복마다 해당 조건이 확인됩니다. false이면 반복문을 멈춥니다.
+- body :	`alert(i)`	condition이 truthy일 동안 계속해서 실행됩니다.
+- step	: `i++`	각 반복의 body가 실행된 이후에 실행됩니다.
+- 일반적인 반복문 알고리즘은 다음과 같습니다.
 
 begin을 실행함
 → (condition이 truthy이면 → body를 실행한 후, step을 실행함)
