--- a/JavaScript/JavaScript/연산자'??'+반복문(20220606).md
+++ b/JavaScript/JavaScript/연산자'??'+반복문(20220606).md
@@ -298,18 +298,15 @@ if (i > 5) {
   continue;
 }
 </code></pre>
+  - 물음표를 사용해서 위 조건문을 아래와 같이 바꾸려는 시도할 가능성이 있는데,
+  - `(i > 5) ? alert(i) : continue; // 여기에 continue를 사용하면 안 됩니다.`
+  - 이런 코드는 문법 에러를 발생시킵니다.
+- 이는 물음표 연산자 ?를 if문 대용으로 쓰지 말아야 하는 이유 중 하나입니다.
 
-- 물음표를 사용해서 위 조건문을 아래와 같이 바꾸려는 시도를 할 수 있을 겁니다.
-
-(i > 5) ? alert(i) : continue; // 여기에 continue를 사용하면 안 됩니다.
-이런 코드는 문법 에러를 발생시킵니다.
-
-이는 물음표 연산자 ?를 if문 대용으로 쓰지 말아야 하는 이유 중 하나입니다.
-
-break/continue와 레이블
-여러 개의 중첩 반복문을 한 번에 빠져나와야 하는 경우가 종종 생기곤 합니다.
-
-i와 j를 반복하면서 프롬프트 창에 (0,0)부터 (2,2)까지를 구성하는 좌표 (i, j)를 입력하게 해주는 예시를 살펴봅시다.
+## break/continue와 레이블
+- 여러 개의 중첩 반복문을 한 번에 빠져나와야 하는 경우가 종종 생기곤 합니다.
+- i와 j를 반복하면서 프롬프트 창에 (0,0)부터 (2,2)까지를 구성하는 좌표 (i, j)를 입력하게 해주는 예시
+<pre><code>
 
 for (let i = 0; i < 3; i++) {
 
@@ -322,17 +319,18 @@ for (let i = 0; i < 3; i++) {
 }
 
 alert('완료!');
-사용자가 Cancel 버튼을 눌렀을 때 반복문을 중단시킬 방법이 필요합니다.
-
-input 아래에 평범한 break 지시자를 사용하면 안쪽에 있는 반복문만 빠져나올 수 있습니다. 이것만으론 충분하지 않습니다(중첩 반복문을 포함한 반복문 두 개 모두를 빠져나와야 하기 때문이죠 – 옮긴이). 이럴 때 레이블을 사용할 수 있습니다.
-
-레이블(label) 은 반복문 앞에 콜론과 함께 쓰이는 식별자입니다.
-
+</code></pre>
+  - 사용자가 Cancel 버튼을 눌렀을 때 반복문을 중단시킬 방법이 필요합니다.
+  - input 아래에 평범한 break 지시자를 사용하면 안쪽에 있는 반복문만 빠져나올 수 있지만, 이것만으론 충분하지 않다(중첩 반복문을 포함한 반복문 두 개 모두를 빠져나와야 하기 때문). 
+  - 이럴 때 레이블을 사용할 수 있다.
+- 레이블(label) 은 반복문 앞에 콜론과 함께 쓰이는 식별자입니다.
+<pre><code>
 labelName: for (...) {
   ...
 }
-반복문 안에서 break <labelName>문을 사용하면 레이블에 해당하는 반복문을 빠져나올 수 있습니다.
-
+</code></pre>
+- 반복문 안에서 break <labelName>문을 사용하면 레이블에 해당하는 반복문을 빠져나올 수 있다.
+<pre><code>
 outer: for (let i = 0; i < 3; i++) {
 
   for (let j = 0; j < 3; j++) {
@@ -346,22 +344,22 @@ outer: for (let i = 0; i < 3; i++) {
   }
 }
 alert('완료!');
-위 예시에서 break outer는 outer라는 레이블이 붙은 반복문을 찾고, 해당 반복문을 빠져나오게 해줍니다.
+</code></pre>
+  - 위 예시에서 break outer는 outer라는 레이블이 붙은 반복문을 찾고, 해당 반복문을 빠져나오게 한다.
+  - 따라서 제어 흐름이 (*)에서 alert('완료!')로 바로 바뀝니다.
 
-따라서 제어 흐름이 (*)에서 alert('완료!')로 바로 바뀝니다.
-
-레이블을 별도의 줄에 써주는 것도 가능합니다.
-
+- 레이블을 별도의 줄에 써주는 것도 가능
+<pre><code>
 outer:
 for (let i = 0; i < 3; i++) { ... }
-continue 지시자를 레이블과 함께 사용하는 것도 가능합니다. 두 가지를 같이 사용하면 레이블이 붙은 반복문의 다음 이터레이션이 실행됩니다.
-
-레이블은 마음대로 '점프’할 수 있게 해주지 않습니다.
-레이블을 사용한다고 해서 원하는 곳으로 마음대로 점프할 수 있는 것은 아닙니다.
-
-아래 예시처럼 레이블을 사용하는 것은 불가능합니다.
-
+</code></pre>
+- continue 지시자를 레이블과 함께 사용하는 것도 가능하다. 두 가지를 같이 사용하면 레이블이 붙은 반복문의 다음 이터레이션이 실행된다
+- 레이블은 마음대로 '점프’할 수 있게 해주지 않는다.
+- 레이블을 사용한다고 해서 원하는 곳으로 마음대로 점프할 수 있는 것은 아니다.
+- 아래 예시처럼 레이블을 사용하는 것은 불가능
+<pre><code>
 break label; // 아래 for 문으로 점프할 수 없습니다.
 
 label: for (...)
-break와 continue는 반복문 안에서만 사용할 수 있고, 레이블은 반드시 break이나 continue 지시자 위에 있어야 합니다.
+</code></pre>
+- break와 continue는 반복문 안에서만 사용할 수 있고, 레이블은 반드시 break이나 continue 지시자 위에 있어야 합니다.
