--- a/JavaScript/JavaScript/연산자'??'+반복문(20220606).md
+++ b/JavaScript/JavaScript/연산자'??'+반복문(20220606).md
@@ -329,7 +329,7 @@ labelName: for (...) {
   ...
 }
 </code></pre>
-- 반복문 안에서 break <labelName>문을 사용하면 레이블에 해당하는 반복문을 빠져나올 수 있다.
+- 반복문 안에서 `break <labelName>`문을 사용하면 레이블에 해당하는 반복문을 빠져나올 수 있다.
 <pre><code>
 outer: for (let i = 0; i < 3; i++) {
 
@@ -337,7 +337,7 @@ outer: for (let i = 0; i < 3; i++) {
 
     let input = prompt(`(${i},${j})의 값`, '');
 
-    // 사용자가 아무것도 입력하지 않거나 Cancel 버튼을 누르면 두 반복문 모두를 빠져나옵니다.
+    // 사용자가 아무것도 입력하지 않거나 Cancel 버튼을 누르면 두 반복문 모두를 빠져나온다.
     if (!input) break outer; // (*)
 
     // 입력받은 값을 가지고 무언가를 함
@@ -346,7 +346,7 @@ outer: for (let i = 0; i < 3; i++) {
 alert('완료!');
 </code></pre>
   - 위 예시에서 break outer는 outer라는 레이블이 붙은 반복문을 찾고, 해당 반복문을 빠져나오게 한다.
-  - 따라서 제어 흐름이 (*)에서 alert('완료!')로 바로 바뀝니다.
+  - 따라서 제어 흐름이 (*)에서 alert('완료!')로 바로 바뀐다.
 
 - 레이블을 별도의 줄에 써주는 것도 가능
 <pre><code>
@@ -358,8 +358,8 @@ for (let i = 0; i < 3; i++) { ... }
 - 레이블을 사용한다고 해서 원하는 곳으로 마음대로 점프할 수 있는 것은 아니다.
 - 아래 예시처럼 레이블을 사용하는 것은 불가능
 <pre><code>
-break label; // 아래 for 문으로 점프할 수 없습니다.
+break label; // 아래 for 문으로 점프할 수 없다.
 
 label: for (...)
 </code></pre>
-- break와 continue는 반복문 안에서만 사용할 수 있고, 레이블은 반드시 break이나 continue 지시자 위에 있어야 합니다.
+- break와 continue는 반복문 안에서만 사용할 수 있고, 레이블은 반드시 break이나 continue 지시자 위에 있어야 한다.
