--- a/JavaScript/JavaScript/화살표 함수+주석(20220626).md
+++ b/JavaScript/JavaScript/화살표 함수+주석(20220626).md
@@ -186,27 +186,4 @@ function pow(x, n) {
   - 새로 작성한 코드를 되돌렸지만, 이미 시간은 낭비되었다
 - 해결 방법을 담고 있는 주석은 이전에 했던 실수를 방지하는 안내판 역할을 한다
 4. 미묘한 기능이 있고, 이 기능이 어디에 쓰이는지를 설명하는 주석
-- 직감에 반하는 미묘한 동작을 수행하는 코드가 다면 주석을 달아주는 것이 좋다
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+- 직감에 반하는 미묘한 동작을 수행하는 코드가 있다면 주석을 달아주는 것이 좋다
